--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=c7e502f2a7bacfbcdf61",
+    "/css/app.css": "/css/app.css?id=5738caa5b70255116d6e"
 }
