--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "^2.5",
         "mews/captcha": "^3.2",
         "overtrue/laravel-lang": "~3.0",
-        "spatie/laravel-permission": "^4.0"
+        "spatie/laravel-permission": "^4.0",
+        "viacreative/sudo-su": "^1.1"
     },
     "require-dev": {
         "facade/ignition": "^1.16.4",
@@ -23,7 +24,8 @@
         "laravel/ui": "^1.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.5.8|^9.3.3"
+        "phpunit/phpunit": "^8.5.8|^9.3.3",
+        "summerblue/generator": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
