--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.5.8|^9.3.3",
-        "summerblue/generator": "^8.0"
+        "summerblue/generator": "6.*"
     },
     "config": {
         "optimize-autoloader": true,
