--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,18 @@
         "php": "^7.2.5",
         "fideloper/proxy": "^4.4",
         "intervention/image": "^2.5",
+        "jukylin/jaeger-php": "dev-master@dev",
         "laravel/framework": "^6.20",
         "laravel/tinker": "^2.5",
         "mews/captcha": "^3.2",
         "overtrue/laravel-lang": "~3.0",
+        "ramsey/uuid": "3.9.3",
         "spatie/laravel-permission": "^4.0",
         "summerblue/administrator": "6.*",
         "viacreative/sudo-su": "^1.1"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "2.8.2",
         "facade/ignition": "^1.16.4",
         "fakerphp/faker": "^1.9.1",
         "laravel/ui": "^1.0",
@@ -35,7 +38,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "barryvdh/laravel-ide-helper"
+            ]
         }
     },
     "autoload": {
